[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
recap = { git = "https://github.com/softprops/recap", branch = "master" }
anyhow = "1.0.51"
serde = { version = "1.0.130", features = ["derive"] }
itertools = "0.10.1"
hashbrown = "0.11.2"
bitvec = "0.22.3"
termion = "1.5.6"
rayon = "1.5.1"

[profile.release]
debug = true
